# backup_repository_source_code

./: MANIFEST.md  README.md
.github/workflows/: backup-from-gitea.yml
repos/bal-electrum-plugin/: bal-electrum-plugin.bundle
repos/bal-pusher/: bal-pusher.bundle
repos/bal-pusher/source/: bal-pusher.env  bal-pusher.service  bitcoind.service
repos/bal-pusher/source/src/: main.rs
repos/bal-server/: bal-server.bundle
repos/bal-server/source/: Cargo.toml  README.md  RPC.md  bal-pusher.env  bal-pusher.sh  bal-server.env  bal-server.service  bal-server.sh
repos/bal-server/source/src/: db.rs  xpub.rs
repos/bal-website/: bal-website.bundle
repos/bal-website/source/: README.md  index.html  index2.html  public_key.gpg  wq.html
repos/bal-welist-website/: bal-welist-website.bundle
repos/bal-welist-website/source/: README.md  bal.js  index.html  weinfo.html
repos/bal_plugin_linux_installation/: bal_plugin_linux_installation.bundle
repos/bal_plugin_manual/: bal_plugin_manual.bundle
repos/bal_plugin_windows_installation/: bal_plugin_windows_installation.bundle
scripts/: backup_from_gitea.sh
